# fastsupabased-acl

./: README.md  pyproject.toml
fast_supabased_acl/: main.py
fastsupabased_acl/: __init__.py
sample/: main.py
