[tool.poetry]
name = "fastsupabased-acl"
version = "0.1.4"
description = "FastAPI Dependency for Supabase-based ACL using Supabase Roles"
authors = ["Vinicius Mesel <4984147+vmesel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
supabase = "^2.4.6"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
